@@ -1,3 +1,14 @@
+2010-01-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Fix broken "go back to the state before tklock" logic.
+
+	* src/home/hd-render-manager.c (hd_render_manager_set_state): Show
+	desktop in all cases again, otherwise hd-comp-mgr thinks we are in app
+	mode.
+	* src/mb/hd-comp-mgr.c (hd_comp_mgr_restack): Don't go to app mode
+	unless the current app changed. Also, store desktop as the current app
+	if we bailed out before the check.
+
 2010-01-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Fixes: NB#133564 - Able to pane in layout mode when usb cable is
